# trj_opt

./: CHANGELOG.md  QUICK_START.md  README.md  nodeids  pyproject.toml  requirements.txt  run_2_Dit.csv  run_2_T.csv  run_3_Dit.csv  test_landauer.py  test_srh.py
.github/workflows/: demo.yml
examples/: README.md  config.yml  example_settings.yaml  run_demo_Dit.csv  run_demo_T.csv
scripts/: run_demo.py
src/trj_opt/: analyze.py  calibration.py  cli.py  landauer.py  objectives.py  recommend.py  srh.py
trj_opt_ultimate/: README.md  doe_plan.csv  run_1_Dit.csv  run_1_T.csv  run_3_T.csv
trj_opt_ultimate/src/trj_opt/: __init__.py  cli.py  coupled.py  gui_app.py  io.py  lab_bridge.py  learn_bridge.py  pareto.py  report.py  robustness.py
trj_opt_ultimate/src/trj_opt/data/: materials.json
