[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trj_opt"
version = "0.1.0"
description = "Reconstructed ultimate version of trj_opt from partial archives"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Reconstruction Assistant"}]
dependencies = []

[project.urls]
homepage = "https://example.com"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
trj-opt = "trj_opt.cli:main"
